Add configurable serde properties and refactor/cleanup